fix firefox image opacity flicker issue

--- a/assets/css/less/structure.less
+++ b/assets/css/less/structure.less
@@ -176,14 +176,15 @@ body {
 			border-radius: 5px 5px 0 0;
 
 			& .download-grid-thumb {
+				background-color: #fff;
 				border-radius: 4px 4px 0 0;
 				opacity: .9;
 				vertical-align: bottom;
-				-webkit-transition: all .2s ease-in-out;
-				-moz-transition: all .2s ease-in-out;
-				-o-transition: all .2s ease-in-out;
-				-ms-transition: all .2s ease-in-out;
-				transition: all .2s ease-in-out;
+				-webkit-transition: opacity .2s ease-in-out;
+				-moz-transition: opacity .2s ease-in-out;
+				-o-transition: opacity .2s ease-in-out;
+				-ms-transition: opacity .2s ease-in-out;
+				transition: opacity .2s ease-in-out;
 
 				&:hover {
 					opacity: 1;
